index.css
@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500;6..96,600;6..96,700;6..96,800;6..96,900&family=Montserrat:wght@500;600;700&display=swap');

body {
    --main-light: #ffff;
    --main-dark: #23292b;
    --second-light: #b1cbc9;
    --second-dark: #2d3437;

    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    background: var(--main-light);
    font-optical-sizing: auto;
    font-variation-settings: "opsz" 20;
}

h1 {
    color: var(--main-dark);
    font-weight: 700;
    font-size: 80pt;
    font-family: 'Bodoni Moda', serif;
}

h2 {
    color: var(--main-dark);
    font-weight: 600;
    font-size: 20pt;
    font-family: 'Bodoni Moda', serif;
}

a {
    color: var(--second-light);
}

#main {
    position: relative;
    overflow: hidden;
    width: 100vw;
    height: 100vh;
}

#title {
    position: absolute;
    top: 50%;
    left: 50%;
    width: fit-content;
    height: fit-content;
    margin: 0;
    padding: 0;
    white-space: nowrap;
    transform: translate(-50%, -50%);
}

#background {
    position: absolute;
    background-color: var(--main-dark);
    width: 60pt;
    height: 60pt;
    border-radius: 50%;
    overflow: hidden;
    z-index: -1;
}

#about_link {
    left: 100px;
}

#projects_link {
    right: 100px;
}

#mail_link {
    -webkit-mask: url(assets/email.svg) no-repeat center;
    mask: url(assets/email.svg) no-repeat center;
}

#github_link {
    -webkit-mask: url(assets/github.svg) no-repeat center;
    mask: url(assets/github.svg) no-repeat center;
}

#links {
    position: absolute;
    left: 50%;
    top: 10px;
    transform: translateX(-50%);
    z-index: 1;
}

.background_dot {
    transform: scale(0);
    transition: transform .5s ease-in-out;
}

.background_fullscreen {
    transform: scale(50);
    transition: transform 1s ease-in-out;
}

.unselectable {
    user-select: none;
}

.navigation_link {
    position: absolute;
    color: #dcd6d4;
    mix-blend-mode: difference;
    transform: translate(0, 50%);
    bottom: 50%;
    padding: 20px
}

.navigation_link:hover {
    cursor: pointer;
}

.svg_link {
    display: inline-block;
    width: 40px;
    height: 40px;
    margin: 10px;
    background-color: var(--main-dark);
    transition: background-color .5s .3s;
}

@media only screen and (max-width: 1080px) {
    #about_link {
        bottom: 10%;
        left: 50%;
        transform: translate(-50%, 50%);
    }

    #projects_link {
        right: 50%;
        bottom: 20%;
        transform: translate(50%, 50%);
    }
}

@media only screen and (max-width: 850px) {
    #title {
        font-size: 12vw;
    }
}

